[package]
name = "termtrace"
version = "0.1.0"
edition = "2021"
authors = ["Obot <oboobotenefiok@gmail.com>"]
  description = "Advanced package tracker for Termux with dependency resolution"
  repository = "https://github.com/oboobotenefiok/termtrace"
  license = "MIT"
  
  [dependencies]
  anyhow = "1.0.75"
  serde = { version = "1.0.188", features = ["derive"] }
  serde_json = "1.0.107"
  chrono = "0.4.31"
  clap = { version = "4.4.6", features = ["derive"] }
  dirs = "5.0.1"
  glob = "0.3.1"
  walkdir = "2.4.0"
  regex = "1.10.2"
  colored = "2.0.4"
  toml = "0.8.2"
  thiserror = "1.0.49"
  rayon = "1.8.0"
  parking_lot = "0.12.1"
  which = "5.0.0"
  tempfile = "3.8.0"
  home = "0.5.5"
  serde_yaml = "0.9"
  sha2 = "0.10"
  
  [profile.release]
  lto = true
  codegen-units = 1
  opt-level = 3
  strip = true